Add unit tests
Signed-off-by: JohannesZahn <johannes_zahn@nc-online.de>